updating dom structures and fixing overflow issue with components

--- a/projects/opal-frontend-common/components/custom/custom-account-information/custom-account-information-item/custom-account-information-item-value/custom-account-information-item-value.component.css
+++ b/projects/opal-frontend-common/components/custom/custom-account-information/custom-account-information-item/custom-account-information-item-value/custom-account-information-item-value.component.css
@@ -1,4 +1,4 @@
-.custom-item-value {
+:host {
   color: #0b0c0c;
   font-weight: 300;
   width: 187px;
