--- a/projects/opal-frontend-common/components/custom/custom-account-information/custom-account-information.component.css
+++ b/projects/opal-frontend-common/components/custom/custom-account-information/custom-account-information.component.css
@@ -1,4 +1,4 @@
-.custom-wrapper {
+:host {
   display: flex;
   flex-wrap: wrap;
   max-width: 100%;
